data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_226.wast
;; 7. **Test for Multi-Layer Nested Loops with Labels**:    Develop deeply nested loops with branches at various levels. Each loop should have a unique `typeidx`, and the test ascertains if `br` and `br_if` correctly resolve labels deep within nested layers. This checks the consistent resolution of nested loop branches.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32)
        (loop (result i32)
          (br 1)
          (i32.const 42)
        )
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)